--- a/app/index.html
+++ b/app/index.html
@@ -82,9 +82,17 @@
 
 
     <script src="bower_components/angular-aria/angular-aria.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <!-- <script src="bower_components/angular-animate/angular-animate.js"></script> -->
     
-    <script src="bower_components/angular-material/angular-material.js"></script>
+    <!-- <script src="bower_components/angular-material/angular-material.js"></script> -->
+
+
+
+<!-- highcharts gauge -->
+<script src="bower_components/highcharts/highcharts.js"></script>
+<script src="bower_components/highcharts/highcharts-more.js"></script>
+<!-- <script src="js/exporting.js"></script> -->
+<!-- <script src="js/angular-highcharts.js"></script> -->
 
     <!-- <script src="bower_components/ng-tags-input/ng-tags-input.js"></script>-->
 
