Updates on maslulim and cookies

--- a/app/index.html
+++ b/app/index.html
@@ -23,18 +23,18 @@
     <link rel="stylesheet" href="bower_components/metisMenu/dist/metisMenu.min.css">
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.min.css">
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+    <!-- <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" /> -->
     <link rel="stylesheet" href="bower_components/datatables/media/css/jquery.dataTables.css" />
     <link rel="stylesheet" href="bower_components/datatables/media/css/dataTables.bootstrap.css" />
     <!-- <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.css" /> -->
-    <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css" />
-    <link rel="stylesheet" href="bower_components/angular-material/angular-material.layouts.css" />
-    <link rel="stylesheet" href="bower_components/nvd3/build/nv.d3.css">
+    <!-- <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css" /> -->
+    <!-- <link rel="stylesheet" href="bower_components/angular-material/angular-material.layouts.css" /> -->
+    <!-- <link rel="stylesheet" href="bower_components/nvd3/build/nv.d3.css"> -->
     <!-- <link href="bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet"> -->
     <!-- <link rel="stylesheet" media="all" href="bower_components/leonardo/dist/leonardo.min.css" /> -->
     <!-- <link rel="stylesheet" media="all" href="bower_components/json-formatter/dist/json-formatter.css" /> -->
     <!-- <link rel="stylesheet" href="css/ng-table.css"> -->
-    <link rel="stylesheet" href="css/autocomplete.css">
+    <!-- <link rel="stylesheet" href="css/autocomplete.css"> -->
     <!-- <link rel="stylesheet" href="css/xeditable.css"> -->
     <link rel="stylesheet" href="css/common.css">
     <link href="css/jquery-ui.min.css" rel="stylesheet" type="text/css" />
@@ -49,20 +49,21 @@
     <script src="js/jquery-ui.js"></script>
     <!-- <script src="js/smart-table.debug.js"></script>-->
     <script src="bower_components/angular/angular.min.js"></script>
-    <script src="bower_components/d3/d3.js"></script>
-    <script src="bower_components/nvd3/build/nv.d3.js"></script> <!-- or use another assembly -->
+    <!-- <script src="bower_components/d3/d3.js"></script> -->
+    <!-- <script src="bower_components/nvd3/build/nv.d3.js"></script>  -->
+    <!-- or use another assembly -->
     <!-- // <script src="js/angular-drag-and-drop-lists.js"></script> -->
     <!-- // <script src="js/angular-dragdrop.min.js"></script> -->
     <!-- // <script src="js/sortable.js"></script> -->
     <!-- // <script src="js/xeditable.js"></script> -->
-    <script src="bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
+    <!-- <script src="bower_components/angular-nvd3/dist/angular-nvd3.js"></script> -->
     <!-- // <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script> -->
 
     <script src="bower_components/angular-datatables/dist/angular-datatables.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="bower_components/json3/lib/json3.min.js"></script>
+    <!-- <script src="bower_components/json3/lib/json3.min.js"></script> -->
     <script src="bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
     <script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
